--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -171,5 +171,11 @@
     <ClCompile Include="7_string_boj_5218.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="7%40_string_boj_3986.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="7_string_boj_2857.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
