dp w/ diligent tc maker

--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -180,5 +180,8 @@
     <ClCompile Include="2_dp_boj_11048.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2_dp_boj_2294.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
