--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -183,5 +183,8 @@
     <ClCompile Include="2_dp_boj_2294.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="7_string_boj_4949.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
