--- a/COTE.vcxproj.filters
+++ b/COTE.vcxproj.filters
@@ -189,5 +189,8 @@
     <ClCompile Include="3_dfs_boj_11403_again.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="7_string_boj_9933.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
